--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,15 @@
 button .material-icons{
     margin-bottom: 13px;
 }
+.classified.ng-enter, .classified.ng-move{
+    transition: 0.4s all;
+    opacity: 0;
+}
+.classified.ng-enter.ng-enter-active, .classified.ng-move.ng-move-active{
+    opacity: 1;
+}
+
+@keyframes fade_classified{
+    from{ opacity: 1;}
+    to{ opacity: 0;}
+}
