--- a/components/classifieds/classifieds.tpl.html
+++ b/components/classifieds/classifieds.tpl.html
@@ -1,66 +1,54 @@
-<!--NAVBAR-->
-<md-toolbar>
-    <div class="md-toolbar-tools">
-        <p><strong>ngClassifieds</strong></p>
-        <md-button ng-click="vm.openSidebar()">
-            <md-icon class="mdi mdi-plus-circle"></md-icon>
-            NEW CLASSIFIEDS
-        </md-button>
-        <md-button ng-click="showFilters = true">
-            <md-icon class="mdi mdi-magnify"></md-icon>
-            Filters
-        </md-button>
-    </div>
+<md-toolbar md-scroll-shrink>
+  <div class="md-toolbar-tools"> 
+    
+    <p><strong>ngClassifieds</strong></p>
+    
+    <md-button ng-click="vm.openSidebar()">
+      <md-icon class="mdi mdi-plus-circle"></md-icon>
+      New Classified
+    </md-button>
+
+    <md-button ng-click="vm.showFilters = !vm.showFilters">
+      <md-icon class="mdi mdi-magnify"></md-icon>
+      Filters
+    </md-button>
+
+  </div>
 </md-toolbar>
 
-<div class="filters" layout="row" layout-align="center center" ng-show="showFilters">
-    <md-input-container>
-        <label for="">Enter Search Term</label>
-        <input type="text" ng-model="classifiedsFilter">
-    </md-input-container>
-    <md-input-container>
-        <label for="">Category</label>
-        <md-select ng-model="category">
-            <md-option ng-repeat="category in vm.categories" value="{{category}}">
-                {{category}}
-            </md-option>
-        </md-select>
-    </md-input-container>
-    <div layout="row">
-        <md-button class="md-warn" ng-click="classifiedsFilter = ''; category = '' ">Clear</md-button>
-    </div>
+<div class="filters" layout="row" layout-align="center center" ng-show="vm.showFilters">
+  <!--  We're working locally with our models here. They don't interact
+  with our controller because we don't prefix them with vm -->
+  <md-input-container>
+    <label>Enter a Search Term</label>
+    <input ng-model="classifiedsFilter" type="text">
+  </md-input-container>
+
+  <md-input-container>
+    <label>Category</label>
+    <md-select ng-model="category">
+      <md-option ng-repeat="category in vm.categories" value="{{ category }}">  
+        {{ category }}
+      </md-option>
+    </md-select>
+  </md-input-container>
+  
+  <div layout="row">
+    <md-button ng-click="classifiedsFilter = '';category='';" class="md-warn">
+      Clear
+    </md-button>
+  </div>
+
 </div>
 
-<div ui-view=""></div>
+<ui-view></ui-view>
 
-<md-content class="md-padding" layout="row" layout-wrap>
-    <md-card class="classified" flex="30" ng-repeat="classified in vm.classifieds | filter:classifiedsFilter | filter:category" flex="30">
-        <img ng-src="{{classified.image}}" alt="">
-        <md-card-content>
-            <div class="classified-info" ng-show="!showContact">
-                <h2 class="md-title">{{classified.title}}</h2>
-                <h2>{{classified.posted | date}}</h2>
-                <h3>{{classified.price | currency}}</h3>
-                <p>{{classified.description}}</p>
-             </div>
-            <div class="classified-contact" ng-show="showContact">
-                <p><md-icon class="mdi mdi-account"></md-icon>{{classified.contact.name}}</p>
-                <p><md-icon class="mdi mdi-phone"></md-icon>{{classified.contact.phone}}</p>
-                <p><md-icon class="mdi mdi-email"></md-icon>{{classified.contact.email}}</p>
-            </div>
-            <div layout="row">
-                <md-button ng-show="!showContact" ng-click="showContact = true">Contact</md-button>
-                <md-button ng-show="showContact" ng-click="showContact = false">Details</md-button>
-                <md-button ng-show="!showAdmin" ng-click="showAdmin = true">Admin</md-button>
-                <md-button ng-show="showAdmin" ng-click="showAdmin = false">Close</md-button>
-            </div>
-            <div class="classified-admin" ng-if="showAdmin">
-                <h3>Admin</h3> 
-                <div layout="row">
-                    <md-button class="md-primary" ng-click="vm.editClassified(classified)">Edit</md-button>
-                    <md-button class="md-warn" ng-click="vm.deleteClassified($event, classified)">Delete</md-button>
-                </div>
-            </div>
-        </md-card-content>
-    </md-card>
+<md-content layout-padding>
+  <classified-card
+    classifieds="vm.classifieds" 
+    search-filter="classifiedsFilter"
+    category-filter="category"
+    layout="row"
+    layout-wrap>
+  </classified-card>
 </md-content>
