--- a/components/classifieds/edit/classifieds.edit.tpl.html
+++ b/components/classifieds/edit/classifieds.edit.tpl.html
@@ -1,30 +1,36 @@
-<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="vm.sidenavOpen">
-    <md-toolbar>
-        <h1 class="md-toolbar-tools">Edit Classifides</h1>
-    </md-toolbar>
-
-    <md-content layout-padding>
-        <form action="">
-            <md-input-container>
-                <label for="title">Title</label>
-                <input type="text" id="title" md-autofocus ng-model="vm.classified.title">
-            </md-input-container>
-            <md-input-container>
-                <label for="price">Price</label>
-                <input type="text" id="price" ng-model="vm.classified.price">
-            </md-input-container>
-            <md-input-container>
-                <label for="description">Description</label>
-                <input type="text" id="description" ng-model="vm.classified.description">
-            </md-input-container>
-            <md-input-container>
-                <label for="image">Image Link</label>
-                <input type="text" id="image" ng-model="vm.classified.image">
-            </md-input-container>
-            <div class="clearfix"></div>
-            <md-button class="md-primary" ng-click="vm.saveEdit()">Save Edit</md-button>
-            <md-button class="md-warn" ng-click="vm.closeSidebar()">Cancel</md-button>
-
-        </form>
-    </md-content>
+<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="sidenavOpen">
+  <md-toolbar class="md-theme-light">
+    <h1 class="md-toolbar-tools">{{ vm.sidebarTitle }}</h1>
+  </md-toolbar>
+  <md-content layout-padding>
+    <form>
+      <md-input-container>
+        <label for="title">Title</label>
+        <input type="text" id="title"
+               ng-model="vm.classified.title" md-autofocus>
+      </md-input-container>
+      <md-input-container>
+        <label for="price">Price</label>
+        <input type="text" id="price"
+             ng-model="vm.classified.price">
+      </md-input-container>
+      <md-input-container>
+        <label for="description">Description</label>
+        <textarea type="text" id="description"
+              ng-model="vm.classified.description">
+        </textarea>
+      </md-input-container>
+      <md-input-container>
+        <label for="image">Image Link</label>
+        <input type="text" id="image"
+              ng-model="vm.classified.image">
+      </md-input-container>
+      <md-button ng-click="vm.saveEdit(vm.classified)" class="md-primary">
+        Save Edit
+      </md-button>
+      <md-button ng-click="vm.closeSidebar()" class="md-warn">
+        Cancel
+      </md-button>
+    </form>
+  </md-content>
 </md-sidenav>
