--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,31 @@
-
-button .material-icons{
-    margin-bottom: 13px;
-}
-.classified.ng-enter, .classified.ng-move{
-    transition: 0.4s all;
-    opacity: 0;
-}
-.classified.ng-enter.ng-enter-active, .classified.ng-move.ng-move-active{
-    opacity: 1;
+md-card img {
+  width: 100%;
+  height: auto;
+  min-height: 0px;
 }
 
-@keyframes fade_classified{
-    from{ opacity: 1;}
-    to{ opacity: 0;}
+button .material-icons {
+  margin-bottom: 12px;
+}
+
+.filters md-input-container {
+  margin-right: 10px;
+}
+
+.classified.ng-enter, .classified.ng-move {
+  transition: 0.4s all;
+  opacity: 0;
+}
+
+.classified.ng-enter.ng-enter-active, .classified.ng-move.ng-move-active {
+  opacity: 1;
+}
+
+.classified.ng-leave {
+  animation: 0.4s fade_classified;
+}
+
+@keyframes fade_classified {
+  from { opacity: 1; }
+  to { opacity: 0; }
 }
