removed category dropdown

--- a/components/classifieds/edit/classifieds.edit.tpl.html
+++ b/components/classifieds/edit/classifieds.edit.tpl.html
@@ -25,6 +25,7 @@
         <input type="text" id="image"
               ng-model="vm.classified.image">
       </md-input-container>
+      <div class="clearfix"></div>
       <md-button ng-click="vm.saveEdit(vm.classified)" class="md-primary">
         Save Edit
       </md-button>
